HTML and CSS part 4

--- a/copyFocus/index.html
+++ b/copyFocus/index.html
@@ -84,31 +84,45 @@
         <!-- About Us -->
 
         <section id="about">
-            
-            <div class="aboutIntro">
-                <h1 class="aboutTitle">Why you should <span class='greenSpan'>choose us</span></h1>
-                <p class="aboutPara">Making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover any web sites still</p>
+            <div class="container">
+                <div class="aboutIntro">
+                    <h1 class="aboutTitle">Why you should <span class='greenSpan'>choose us</span></h1>
+                    <p class="aboutPara">Making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover any web sites still</p>
+                </div>
+                <div class="aboutCards">
+                    <div class="aboutCard">
+                        <div class="aboutCardInner aboutCardInnerFirst">
+                            <image src='images/power-full-icon.png'></image>
+                            <h3 class='aboutCardTitle'>Powerful Features</h3>
+                            <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+                        </div>
+                        <button class="aboutCardButton button">Read More</button>
+                    </div>
+
+
+                    <div class="aboutCard">
+                        <div class="aboutCardInner">
+                            <image src='images/optimised-icon.png'></image>
+                            <h3 class='aboutCardTitle'>Today Optimised</h3>
+                            <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+                        </div>
+                        <button class="aboutCardButton  button">Read More</button>
+                    </div>
+
+
+                    <div class="aboutCard">
+                        <div class="aboutCardInner">
+                            <image src='images/headfone-icon.png'></image>
+                            <h3 class='aboutCardTitle'>WorldWide Support</h3>
+                            <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+                        </div>
+                        <button class="aboutCardButton  button">Read More</button>
+                    </div>
+                </div>
             </div>
-            <div class="aboutCards">
-                <div class="aboutCard">
-                    <image src='images/power-full-icon.png'></image>
-                    <h3 class='aboutCardTitle'>Powerful Features</h3>
-                    <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
-                    <button class="aboutCardButton">Read More</button>
-                </div>
-                <div class="aboutCard">
-                    <image src='images/optimised-icon.png'></image>
-                    <h3 class='aboutCardTitle'>Today Optimised</h3>
-                    <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
-                    <button class="aboutCardButton">Read More</button>
-                </div>
-                <div class="aboutCard">
-                    <image src='images/headfone-icon.png'></image>
-                    <h3 class='aboutCardTitle'>WorldWide Support</h3>
-                    <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
-                    <button class="aboutCardButton">Read More</button>
-                </div>
-            </div>
+
+
+
             <div class="aboutOffer">
                 <div class="aboutOfferBackgroundTop">
                     <image src='images/about-top-bg.png'></image>
