HTML and CSS part 5

--- a/copyFocus/index.html
+++ b/copyFocus/index.html
@@ -32,7 +32,7 @@
                 <div class="clearFloat"></div>
 
                 <div class="navLogo">
-                    <image src='images/logo.png'></image>
+                    <img src='images/logo.png'></img>
                 </div>
                 <div class="navLinks">
                     <ul class='navList'>
@@ -50,7 +50,7 @@
 
 
             <!-- <div class="showcaseBackground">
-                <image src='images/banner.png'></image>
+                <img src='images/banner.png'></img>
             </div> -->
 
             <!-- With Floats if we turn them on, we have to turn them off -->
@@ -60,7 +60,7 @@
                 <div class="clearFloat"></div>
 
                 <div class="showcaseWoofer">
-                    <image src='images/woofer.png'></image>
+                    <img src='images/woofer.png'></img>
                 </div>
                 <div class="showcaseText">
                     <h1 class="showcaseTitle">Unlimited Web Hosting</h1>
@@ -92,7 +92,7 @@
                 <div class="aboutCards">
                     <div class="aboutCard">
                         <div class="aboutCardInner aboutCardInnerFirst">
-                            <image src='images/power-full-icon.png'></image>
+                            <img src='images/power-full-icon.png'></img>
                             <h3 class='aboutCardTitle'>Powerful Features</h3>
                             <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
                         </div>
@@ -102,7 +102,7 @@
 
                     <div class="aboutCard">
                         <div class="aboutCardInner">
-                            <image src='images/optimised-icon.png'></image>
+                            <img src='images/optimised-icon.png'></img>
                             <h3 class='aboutCardTitle'>Today Optimised</h3>
                             <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
                         </div>
@@ -112,7 +112,7 @@
 
                     <div class="aboutCard">
                         <div class="aboutCardInner">
-                            <image src='images/headfone-icon.png'></image>
+                            <img src='images/headfone-icon.png'></img>
                             <h3 class='aboutCardTitle'>WorldWide Support</h3>
                             <p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
                         </div>
@@ -124,24 +124,31 @@
 
 
             <div class="aboutOffer">
-                <div class="aboutOfferBackgroundTop">
-                    <image src='images/about-top-bg.png'></image>
+                <div class="aboutOfferBackground">
+                    <img src='images/about-top-bg.png'></img>
 
                 </div>
-                <div class="aboutOfferLeftImage">
-                    <image src='images/img-1.png'></image>
+                <div class="aboutOfferContent container">
+                    <div class="aboutOfferLeft">
+                        <img src='images/img-1.png'></img>
+
+                    </div>
+
+                    <div class="aboutOfferArrow">
+                        <img src='images/right-aerow.png'></img>
+                    </div>
+
+                    <div class="aboutOfferRight">
+                        <h1 class="aboutOfferRightTitle greenSpan">599.00* .com</h1>
+                        <h4 class='aboutOfferRightSubHeading'>Special Offer For Limited Time. 30% Discount On All Hosting Plans</h4>
+                        <p class="aboutOfferRightPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+                    </div>
+
 
                 </div>
-                <div class="aboutOfferArrowImage">
-                    <image src='images/right-aerow.png'></image>
-                </div>
-                <div class="aboutOfferRightSide">
-                    <h1 class="aboutOfferRightSideTitle">599.00* .com</h1>
-                    <h4 class='aboutOfferRightSideSubHeading'>Special Offer For Limited Time. 30% Discount On All Hosting Plans</h4>
-                    <p class="aboutOfferrightSidePara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
-                </div>
-                <div class="aboutOfferBackgroundBottom">
-                    <image src='images/about-bottom-bg.png'></image>
+
+                <div class="aboutOfferBackground">
+                    <img src='images/about-bottom-bg.png'></img>
                 </div>
             </div>
         </section>
@@ -156,32 +163,32 @@
             </div>
             <div class="servicesCards">
                 <div class="servicesCard">
-                    <image src='images/icon-1.png'></image>
+                    <img src='images/icon-1.png'></img>
                     <h1 class="servicesCardTitle">Shared Hosting</h1>
                     <p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
                 </div>
                 <div class="servicesCard">
-                    <image src='images/icon-2.png'></image>
+                    <img src='images/icon-2.png'></img>
                     <h1 class="servicesCardTitle">Dedicated Hosting</h1>
                     <p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
                 </div>
                 <div class="servicesCard">
-                    <image src='images/icon-3.png'></image>
+                    <img src='images/icon-3.png'></img>
                     <h1 class="servicesCardTitle">Domain Registration</h1>
                     <p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
                 </div>
                 <div class="servicesCard">
-                    <image src='images/icon-4.png'></image>
+                    <img src='images/icon-4.png'></img>
                     <h1 class="servicesCardTitle">Shared Hosting</h1>
                     <p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
                 </div>
                 <div class="servicesCard">
-                    <image src='images/icon-5.png'></image>
+                    <img src='images/icon-5.png'></img>
                     <h1 class="servicesCardTitle">Shared Hosting</h1>
                     <p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
                 </div>
                 <div class="servicesCard">
-                    <image src='images/icon-6.png'></image>
+                    <img src='images/icon-6.png'></img>
                     <h1 class="servicesCardTitle">Shared Hosting</h1>
                     <p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
                 </div>
@@ -194,7 +201,7 @@
         <!-- Contact Us -->
         <section id="contact">
             <div class="contactBackground">
-                <image src='images/contact-bg.png'></image>
+                <img src='images/contact-bg.png'></img>
             </div>
             <div class="contactIntro">
                 <h1 class="contactTitle">Request a <span class='greenSpan'>Call Back</span></h1>
@@ -209,7 +216,7 @@
                     <input type="submit" value="Send">
                 </form>
                 <div class="contactFormImage">
-                    <image src='images/img-2.png'></image>
+                    <img src='images/img-2.png'></img>
                 </div>
             </div>
         </section>
@@ -220,21 +227,21 @@
         <footer id="footer">
             <div class="footerContact">
                 <div class="footerLoc">
-                    <image src='images/map-icon.png'></image>
+                    <img src='images/map-icon.png'></img>
                     <p class="footerLocText">London 145 United Kingdom</p>
                 </div>
                 <div class="footerPhone">
-                    <image src='images/phone-icon.png'></image>
+                    <img src='images/phone-icon.png'></img>
                     <p class="footerLocText">+123-456-7890</p>
                 </div>
                 <div class="footerEmail">
-                    <image src='images/email-icon.png'></image>
+                    <img src='images/email-icon.png'></img>
                     <p class="footerLocText">name@domain.com</p>
                 </div>
             </div>
             <div class="footerSiteNav">
                 <div class="footerSiteNavLogo">
-                    <image src='images/footer-logo.png'></image>
+                    <img src='images/footer-logo.png'></img>
                 </div>
                 <div class="footerUseful">
                     <h1 class="footerUsefulTitle">Useful Links</h1>
