HTML and CSS part 17

--- a/copyFocus/index.html
+++ b/copyFocus/index.html
@@ -86,7 +86,53 @@
 
 
 		<!-- About -->
+		<section id="about" class='container'>
 
+			<div class="aboutIntro text-center my-5">
+				<h1 class="aboutIntroTitle">Why you should <span class='text-success'>choose us</span></h1>
+				<p class="aboutIntroPara my-4 w-50 m-auto">Making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover any web sites still</p>
+			</div>
+
+			<div class="aboutCards text-center">
+				<div class="row">
+					<div class='col-12 col-lg-4'>
+						<div class="aboutCard bg-success p-5">
+							<img class='mb-4' src="images/power-full-icon.png" alt="">
+							<h1 class="aboutCardTitle h3 my-4">Powerful Features</h1>
+							<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+						</div>
+						<button class='btn btn-dark my-4'>Read More</button>
+					</div>
+
+
+					<div class='col-12 col-lg-4'>
+						<div class="aboutCard p-5">
+							<img  class='mb-4' src="images/optimised-icon.png" alt="">
+							<h1 class="aboutCardTitle h3 my-4">Totally Optimised</h1>
+							<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+						</div>
+						<button class='btn btn-dark my-4'>Read More</button>
+					</div>
+
+
+
+					<div class='col-12 col-lg-4'>
+						<div class="aboutCard p-5">
+							<img  class='mb-4' src="images/headfone-icon.png" alt="">
+							<h1 class="aboutCardTitle h3 my-4">WorldWide Support</h1>
+							<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+						</div>
+						<button class='btn btn-dark my-4'>Read More</button>
+					</div>
+
+				</div>
+
+
+
+			</div>
+			
+
+		</section>
 
 
 
