--- a/copyFocus/index.html
+++ b/copyFocus/index.html
@@ -86,51 +86,93 @@
 
 
 		<!-- About -->
-		<section id="about" class='container'>
+		<section id="about">
+			<div class="container">
+				<div class="aboutIntro text-center my-5">
+					<h1 class="aboutIntroTitle">Why you should <span class='text-success'>choose us</span></h1>
+					<p class="aboutIntroPara my-4 w-50 m-auto">Making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover any web sites still</p>
+				</div>
 
-			<div class="aboutIntro text-center my-5">
-				<h1 class="aboutIntroTitle">Why you should <span class='text-success'>choose us</span></h1>
-				<p class="aboutIntroPara my-4 w-50 m-auto">Making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover any web sites still</p>
+				<div class="aboutCards text-center">
+					<div class="row">
+						<div class='col-12 col-lg-4'>
+							<div class="aboutCard bg-success p-5">
+								<img class='mb-4' src="images/power-full-icon.png" alt="">
+								<h1 class="aboutCardTitle h3 my-4">Powerful Features</h1>
+								<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+							</div>
+							<button class='btn btn-dark my-4'>Read More</button>
+						</div>
+
+
+						<div class='col-12 col-lg-4'>
+							<div class="aboutCard p-5">
+								<img  class='mb-4' src="images/optimised-icon.png" alt="">
+								<h1 class="aboutCardTitle h3 my-4">Totally Optimised</h1>
+								<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+							</div>
+							<button class='btn btn-dark my-4'>Read More</button>
+						</div>
+
+
+
+						<div class='col-12 col-lg-4'>
+							<div class="aboutCard p-5">
+								<img  class='mb-4' src="images/headfone-icon.png" alt="">
+								<h1 class="aboutCardTitle h3 my-4">WorldWide Support</h1>
+								<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+							</div>
+							<button class='btn btn-dark my-4'>Read More</button>
+						</div>
+					</div>
+				</div>
 			</div>
 
-			<div class="aboutCards text-center">
-				<div class="row">
-					<div class='col-12 col-lg-4'>
-						<div class="aboutCard bg-success p-5">
-							<img class='mb-4' src="images/power-full-icon.png" alt="">
-							<h1 class="aboutCardTitle h3 my-4">Powerful Features</h1>
-							<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+			<div class="aboutOffer bg-success">
+				
+				<div class="aboutOfferBG">
+					<img class='w-100' src="images/about-top-bg.png" alt="">
+				</div>
+
+
+				<div class="container">
+					<div class="row justify-content-center p-4">
+
+
+						<!-- Only on Screen sizes 992 px or larger -->
+						<div class="col-lg-5 aboutOfferImage">
+							<img class='w-100' src="images/img-1.png" alt="">
 						</div>
-						<button class='btn btn-dark my-4'>Read More</button>
+
+						<!-- Hide on screens smaller than 992px -->
+						<div class="col-lg-2 d-none d-lg-block aboutOfferArrow">
+							<img src="images/right-aerow.png" alt="">
+						</div>
+
+						<div class="col-lg-5 aboutOfferText text-dark bg-white">
+							<h1 class="aboutOfferTitle text-success">599.00 *.com</h1>
+							<h4 class="aboutOfferSubHeading">Special Offer For Limited Time. 30% Discount On All Hosting Plans</h4>
+							<p class="aboutOfferPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
+						</div>
+
+
+
+
 					</div>
 
 
-					<div class='col-12 col-lg-4'>
-						<div class="aboutCard p-5">
-							<img  class='mb-4' src="images/optimised-icon.png" alt="">
-							<h1 class="aboutCardTitle h3 my-4">Totally Optimised</h1>
-							<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
-						</div>
-						<button class='btn btn-dark my-4'>Read More</button>
-					</div>
 
-
-
-					<div class='col-12 col-lg-4'>
-						<div class="aboutCard p-5">
-							<img  class='mb-4' src="images/headfone-icon.png" alt="">
-							<h1 class="aboutCardTitle h3 my-4">WorldWide Support</h1>
-							<p class="aboutCardPara">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still</p>
-						</div>
-						<button class='btn btn-dark my-4'>Read More</button>
-					</div>
 
 				</div>
 
 
 
+
+
+				<div class="aboutOfferBG">
+					<img class='w-100' src="images/about-bottom-bg.png" alt="">
+				</div>
 			</div>
-			
 
 		</section>
 
