HTML and CSS part 19

--- a/copyFocus/index.html
+++ b/copyFocus/index.html
@@ -180,7 +180,61 @@
 
 
 		<!-- Services -->
+		<section id="services">
+			<div class="container text-center">
+				<h1 class="servicesTitle">Our <span class='text-success'>Services</span></h1>
+				<p class="servicesPara w-50 mx-auto my-4">Lorem ipsum dolor sittem ametamngcing elit, per sed do eiusmoad teimpor sittem elit inuning ut sed.</p>
 
+				<div class="servicesCards row justify-content-center">
+					
+					<div class="serviceCard col-md-3 m-2 p-4">
+						<img class='my-5' src="images/icon-1.png" alt="">
+						<h3 class="servicesCardTitle mb-5">Shared Hosting</h3>
+						<p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
+					</div>
+
+					<div class="serviceCard col-md-3 m-2 p-4 bg-success">
+						<img class='my-5' src="images/icon-2.png" alt="">
+						<h3 class="servicesCardTitle mb-5">Dedicated Hosting</h3>
+						<p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
+					</div>
+
+					<div class="serviceCard col-md-3 m-2 p-4">
+						<img class='my-5' src="images/icon-3.png" alt="">
+						<h3 class="servicesCardTitle mb-5">Domain Registration</h3>
+						<p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
+					</div>
+
+					<div class="serviceCard col-md-3 m-2 p-4">
+						<img class='my-5' src="images/icon-4.png" alt="">
+						<h3 class="servicesCardTitle mb-5">Shared Hosting</h3>
+						<p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
+					</div>
+
+					<div class="serviceCard col-md-3 m-2 p-4">
+						<img class='my-5' src="images/icon-5.png" alt="">
+						<h3 class="servicesCardTitle mb-5">Dedicated Hosting</h3>
+						<p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
+					</div>
+
+					<div class="serviceCard col-md-3 m-2 p-4">
+						<img class='my-5' src="images/icon-6.png" alt="">
+						<h3 class="servicesCardTitle mb-5">Domain Registration</h3>
+						<p class="servicesCardPara">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.</p>
+					</div>
+
+
+
+				</div>
+				<button class="btn btn-dark my-4">Read More</button>
+
+
+			</div>
+
+
+
+
+		</section>
 
 
 
